# zipwhip_webhook_consumer

./: Cargo.toml  README.md  run.sh
src/: main.rs
