[package]
name = "webhook_consumer"
version = "0.1.0"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.0"

tokio = { version = "1.2.0", features = ["full"]}
serde = { version = "1.0.123", features = ["derive"] }

zipwhip-rs = "0.5.4"

log = "0.4.14"
env_logger = "0.8.3"
lazy_static = "1.4.0"
